--- a/00-HTML-CSS-Bootstrap/02-CSS/CSS_Assessment.html
+++ b/00-HTML-CSS-Bootstrap/02-CSS/CSS_Assessment.html
@@ -8,8 +8,10 @@ Watch the video lecture for more info on this! -->
   <head>
     <meta charset="utf-8">
     <title>Assessment Test CSS</title>
-    <link rel="stylesheet" href="CSS_Assessment_Solutions.css">
-    <link href="https://fonts.googleapis.com/css?family=Aldrich|Fredoka+One" rel="stylesheet">
+    <link rel="stylesheet" href="CSS_Assessment.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Welcome to Puppy Blog!</h1>
