--- a/00-HTML-CSS-Bootstrap/03-Bootstrap4/Bootstrap_Project_Signup.html
+++ b/00-HTML-CSS-Bootstrap/03-Bootstrap4/Bootstrap_Project_Signup.html
@@ -12,13 +12,36 @@
   <body>
 
   <!-- COPY AND PASTE YOUR NAVBAR FROM THE OTHER PAGE HERE AS WELL! -->
-
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Welcome</a>
+      <a class="navbar-nav" href="Bootstrap_Project_Signup.html">Sign In</a>
+    </div>
+  </nav>
 
 
   <!-- CREATE YOUR FORM HERE INSIDE OF A JUMBOTRON AND CONTAINER -->
 
+  <div class="jumbotron">
+    <form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+  
+</form>
 
-    </div>
+  </div>
 
   </body>
 </html>
